Switched to absolute unit for card height to prevent wrapping.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@
     padding: 1em;
   }
   .resume-card-container {
-    max-height: 140vh;
+    max-height: 1800px;
   }
   .interest-card-container {
     max-height: 80vh;
